--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechStore - Laptops and Computers</title>
-    <link rel="stylesheet" href="static/styles/styles.css">
+    <link rel="stylesheet" href="/static/styles/styles.css" type="text/css">
 </head>
 
 <body>
@@ -19,9 +19,9 @@
                     <li><a href="#">Profile</a></li>
                     <li><a href="#">Create Offer</a></li>
                     <li><a href="#">About</a></li>
-                    <li><a href="#">Login</a></li>
-                    <li><a href="#">Register</a></li>
-                    <li><a href="#">Logout</a></li>
+                    <li><a href="/auth/login">Login</a></li>
+                    <li><a href="/auth/register">Register</a></li>
+                    <li><a href="/auth/logout">Logout</a></li>
                 </ul>
             </nav>
         </div>
