--- a/src/views/auth/register.hbs
+++ b/src/views/auth/register.hbs
@@ -24,7 +24,7 @@
                 </div>
                 <div class="form-group">
                     <label for="confirm-password">Confirm Password:</label>
-                    <input type="password" id="confirm-password" name="confirm-password">
+                    <input type="password" id="confirm-password" name="confirmPassword">
                 </div>
                 <button type="submit" class="btn">Register</button>
                 <p>Already have an account? <a href="/auth/login">Login</a></p>
