Display multiple errors

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -30,10 +30,13 @@
     <!-- In case of error, you should display div with class "errorContainer" -->
     <!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
 
-    <div>
+        <div>
         <div class="errorContainer">
-            <p>Error</p>
+             {{#each error}}
+            <p>{{this}}</p>
+             {{/each}}
         </div>
+       
     </div>
 
     <main>{{{body}}}</main>
