--- a/src/views/auth/register.hbs
+++ b/src/views/auth/register.hbs
@@ -7,16 +7,17 @@
         </div>
     </section>
 
+
     <section class="register-form">
         <div class="container">
             <form action="#" method="POST">
                 <div class="form-group">
                     <label for="name">Name:</label>
-                    <input type="text" id="name" name="username">
+                    <input type="text" id="name" name="username" value="{{user.username}}">
                 </div>
                 <div class="form-group">
                     <label for="email">Email:</label>
-                    <input type="email" id="email" name="email">
+                    <input type="email" id="email" name="email" value="{{user.email}}">
                 </div>
                 <div class="form-group">
                     <label for="password">Password:</label>
