--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TechStore - Laptops and Computers</title>
+    <title>TechStore{{#if title}} | {{title}}{{/if}}</title>
     <link rel="stylesheet" href="/static/styles/styles.css" type="text/css">
 </head>
 
