--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -14,14 +14,22 @@
             <h1>TechStore</h1>
             <nav>
                 <ul>
+                    {{!-- All users --}}
                     <li><a href="/">Home</a></li>
                     <li><a href="#">Catalog</a></li>
+                    <li><a href="#">About</a></li>
+
+                    {{!-- Logged --}}
+                    {{#if user}}
                     <li><a href="#">Profile</a></li>
                     <li><a href="#">Create Offer</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="/auth/logout">Logout</a></li>
+                    {{else}}
+                    {{!-- Guest --}}
                     <li><a href="/auth/login">Login</a></li>
                     <li><a href="/auth/register">Register</a></li>
-                    <li><a href="/auth/logout">Logout</a></li>
+                    {{/if}}
+
                 </ul>
             </nav>
         </div>
